--- a/haskcripto.cabal
+++ b/haskcripto.cabal
@@ -16,9 +16,8 @@ extra-source-files:  CHANGELOG.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base >= 4.14 && < 5
+  exposed-modules:     Substitution.Caesar
+  build-depends:       base >= 4.8 && < 5
+                       , bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
