Added encryption for Rail Fence algorithm

--- a/haskcripto.cabal
+++ b/haskcripto.cabal
@@ -17,6 +17,9 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Substitution.Caesar
+                      , Substitution.RailFence
+                      , Substitution.Keyword
+                      , Substitution.Atbash
   build-depends:       base >= 4.8 && < 5
                        , bytestring
   hs-source-dirs:      src
