--- a/haskcripto.cabal
+++ b/haskcripto.cabal
@@ -22,5 +22,6 @@ library
                       , Substitution.Atbash
   build-depends:       base >= 4.8 && < 5
                        , bytestring
+                       , containers
   hs-source-dirs:      src
   default-language:    Haskell2010
