--- a/haskcripto.cabal
+++ b/haskcripto.cabal
@@ -26,6 +26,7 @@ library
                       , Block.DES.Mangler
                       , Block.DES.Round
                       , Utils
+                      , Matrix
   build-depends:       base >= 4.8 && < 5
                        , bytestring
                        , containers
