--- a/haskcripto.cabal
+++ b/haskcripto.cabal
@@ -29,8 +29,10 @@ library
                       , Hash.MD5.Padding
                       , Hash.MD5.InitValues
                       , Hash.MD5.MD5
+                      , Hash.MD5.Round
   build-depends:       base >= 4.8 && < 5
                        , bytestring
                        , containers
+                       , split
   hs-source-dirs:      src
   default-language:    Haskell2010
